# qemu_uart

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  flake.nix  memory.x
.cargo/: config.toml
src/: lib.rs  main.rs
