[package]
name = "qemu_uart"
version = "0.1.0"
edition = "2024"

[dependencies]
panic-halt = "1.0.0"
riscv = "0.13.0"
riscv-rt = "0.14.0"
multi-hart-critical-section = { git = "https://github.com/rust-for-ssd/multi-hart-critical-section.git", version = "0.1.0", features = ["critical-section-multi-hart"] }
critical-section = { version = "1.2.0", features = ["restore-state-bool"] } 

[lib]
test = false
harness = false
